add hmr support

--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <div id="root"></div>
-    <script type="text/javascript" src="../index.web.bundle?platform=web&dev=true"></script>
+    <script type="text/javascript" src="../index.web.bundle?platform=web&dev=true&hot=true"></script>
 </body>
 </html>
