--- a/web/index.html
+++ b/web/index.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <html lang="cn" style="margin: 0; padding: 0%; width: 100%; height: 100%;">
 <head>
     <meta charset="utf-8">
@@ -7,141 +6,7 @@
     <meta name="description" content="index for wechat">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="renderer" content="webkit">
-    <style>
-        /*基础层 eWei*/
-
-        /*Reset-Normalize3.0.3*/
-        img,legend{border:0}legend,td,th{padding:0}html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block;vertical-align:baseline}audio:not([controls]){display:none;height:0}[hidden],template{display:none}a{background-color:transparent}a:active,a:hover{outline:0}abbr[title]{border-bottom:1px dotted}b,optgroup,strong{font-weight:700}dfn{font-style:italic}h1{font-size:2em;margin:.67em 0}mark{background:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-.5em}sub{bottom:-.25em}svg:not(:root){overflow:hidden}figure{margin:1em 40px}hr{box-sizing:content-box;height:0}pre,textarea{overflow:auto}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}button,input,optgroup,select,textarea{color:inherit; font:inherit;line-height:normal;font-family:sans-serif;margin:0}button{overflow:visible}button,select{text-transform:none}button,html input[type=button],input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}input{line-height:normal}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0}input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-spin-button{height:auto}input[type=search]{-webkit-appearance:textfield;box-sizing:content-box}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em} *{outline:0;-webkit-tap-highlight-color:rgba(255,255,255,0);-webkit-touch-callout:none;background:linear-gradient(to bottom,transparent,transparent)}table{border-collapse:collapse;border-spacing:0}
-
-        /*盒模型 ewei*/
-        *,
-        *:before,
-        *:after {
-            -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-        }
-
-        /*字体*/
-        body {
-            font-family: sans-serif; -webkit-font-smoothing: antialiased;-moz-osx-font-smoothing: grayscale; font-size: 14px; line-height: 1; color: #333;
-            font-style: normal;
-        }
-
-        /*页面基础*/
-        html {width:100%; height: 100%;}
-        body {min-height: 100%; height: 100%;}
-
-        /*flexbox布局*/
-        .flex{
-            /* 设置弹性布局 */
-            display:-webkit-box;/* android 2.1-3.0, ios 3.2-4.3 */
-            display:-webkit-flex;/* Chrome 21+ */
-            display:-ms-flexbox;/* WP IE 10 */
-            display:flex;/* android 4.4 */
-        }
-        .flex-direction-column{
-            /* 设置弹性布局的方向，子元素按照在源文档中声明的顺序从上到下显示 */
-            -webkit-box-orient: vertical;/* android 2.1-3.0, ios 3.2-4.3 */
-            -webkit-flex-direction: column;/* Chrome 21+ */
-            -ms-flex-direction: column;/* WP IE 10 */
-            flex-direction: column;/* android 4.4 */
-        }
-
-        .flex-1{
-            /* 子元素自动占据剩余的空间 */
-            -webkit-box-flex:1;/* android 2.1-3.0, ios 3.2-4.3 */
-            -webkit-flex:1;/* Chrome 21+ */
-            -ms-flex:1;/* WP IE 10 */
-            flex:1;/* android 4.4 */
-        }
-        .flex-2{
-            /* 子元素自动占据剩余的空间 */
-            -webkit-box-flex:2;/* android 2.1-3.0, ios 3.2-4.3 */
-            -webkit-flex:2;/* Chrome 21+ */
-            -ms-flex:2;/* WP IE 10 */
-            flex:2;/* android 4.4 */
-        }
-        .flex-3{
-            /* 子元素自动占据剩余的空间 */
-            -webkit-box-flex:3;/* android 2.1-3.0, ios 3.2-4.3 */
-            -webkit-flex:3;/* Chrome 21+ */
-            -ms-flex:3;/* WP IE 10 */
-            flex:3;/* android 4.4 */
-        }
-        .flex-4{
-            /* 子元素自动占据剩余的空间 */
-            -webkit-box-flex:4;/* android 2.1-3.0, ios 3.2-4.3 */
-            -webkit-flex:4;/* Chrome 21+ */
-            -ms-flex:4;/* WP IE 10 */
-            flex:4;/* android 4.4 */
-        }
-        .flex-5{
-            /* 子元素自动占据剩余的空间 */
-            -webkit-box-flex:5;/* android 2.1-3.0, ios 3.2-4.3 */
-            -webkit-flex:5;/* Chrome 21+ */
-            -ms-flex:5;/* WP IE 10 */
-            flex:5;/* android 4.4 */
-        }
-        .flex-6{
-            /* 子元素自动占据剩余的空间 */
-            -webkit-box-flex:6;/* android 2.1-3.0, ios 3.2-4.3 */
-            -webkit-flex:6;/* Chrome 21+ */
-            -ms-flex:6;/* WP IE 10 */
-            flex:6;/* android 4.4 */
-        }
-        .flex-7{
-            /* 子元素自动占据剩余的空间 */
-            -webkit-box-flex:7;/* android 2.1-3.0, ios 3.2-4.3 */
-            -webkit-flex:7;/* Chrome 21+ */
-            -ms-flex:7;/* WP IE 10 */
-            flex:7;/* android 4.4 */
-        }
-        .flex-8{
-            /* 子元素自动占据剩余的空间 */
-            -webkit-box-flex:8;/* android 2.1-3.0, ios 3.2-4.3 */
-            -webkit-flex:8;/* Chrome 21+ */
-            -ms-flex:8;/* WP IE 10 */
-            flex:8;/* android 4.4 */
-        }
-        .flex-flow-wrap{
-            -webkit-flex-flow: wrap;
-            -moz-flex-flow: wrap;
-            -ms-flex-flow: wrap;
-            flex-flow: wrap;
-        }
-        .flex-pack-center{
-            /* 水平布局下的子元素 水平居中 */
-            -webkit-box-pack: center;/* android 2.1-3.0, ios 3.2-4.3 */
-            -webkit-justify-content: center;/* Chrome 21+ */
-            -ms-flex-pack: center;/* WP IE 10 */
-            justify-content: center;/* android 4.4 */
-        }
-        .flex-align-center{
-            /* 水平布局下的子元素 垂直居中 */
-            -webkit-box-align: center;/* android 2.1-3.0, ios 3.2-4.3 */
-            -webkit-align-items: center;/* Chrome 21+ */
-            -ms-flex-align: center;/* WP IE 10 */
-            align-items: center;/* android 4.4 */
-        }
-        .flex-align-end{
-            /* 水平布局下的子元素 垂直居中 */
-            -webkit-box-align:end;/* android 2.1-3.0, ios 3.2-4.3 */
-            -webkit-align-items: flex-end;/* Chrome 21+ */
-            -ms-flex-align: flex-end;/* WP IE 10 */
-            align-items:flex-end;/* android 4.4 */
-        }
-        .flex-pack-justify{
-            /* 水平布局下的子元素 2端对齐 */
-            -webkit-box-pack: justify;/* android 2.1-3.0, ios 3.2-4.3 */
-            -webkit-justify-content: space-between;/* Chrome 21+ */
-            -ms-flex-pack: justify;/* WP IE 10 */
-            justify-content: space-between;/* android 4.4 */
-        }
-        button,input {
-            border:0;}
-
-        #root {width: 100%; height: 100%; padding: 0; margin:0;}
-    </style>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <div id="root" class="flex"></div>
